--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+zram-init (6.1.0ev3dev1) testing; urgency=medium
+
+  * Update for stretch
+  * Rebase on upstream 6.1.0
+
+ -- David Lechner <david@lechnology.com>  Sat, 25 Mar 2017 18:45:14 -0500
+
 zram-init (3.5ev3dev2) stable; urgency=medium
 
   * Increase swap size to 96MB.
